closes-#2 Add user POST route + modify user model and serializer + add migrations

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ click = "*"
 marshmallow = "*"
 flask-apispec = "*"
 unicode-slugify = "*"
-"psycopg2" = "*"
+psycopg2 = "*"
 gunicorn = "*"
 Flask-Caching = "*"
 Flask-SQLAlchemy = "*"
